Generate bundle, esm bundle and declarations

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple WebGL 2 rendering library",
   "author": "yanchith",
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "concurrently --raw --kill-others \"yarn run build:watch\" \"yarn run serve\"",
     "serve": "http-server -p 8000",
@@ -13,6 +15,8 @@
     "prebuild:watch": "rimraf dist",
     "build:watch": "rollup --config --watch",
     "tslint": "tslint --config tslint.json --project tsconfig.json --type-check \"src/**/*.ts*\"",
+    "predist": "rimraf dist",
+    "dist": "rollup --config && rollup --config rollup.config.esm.js",
     "clean": "rimraf dist"
   },
   "devDependencies": {
