--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "serve": "http-server examples -p 8000",
     "prebuild": "rimraf dist",
     "build": "rollup --config",
     "prebuild:watch": "rimraf dist",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/webgl2": "^0.0.2",
     "concurrently": "^3.5.0",
+    "http-server": "^0.10.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.50.1",
     "rollup-plugin-typescript2": "^0.8.0",
