--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "dev": "concurrently --raw --kill-others \"yarn build:watch\" \"yarn serve\"",
     "serve": "http-server examples -p 8000",
     "prebuild": "rimraf dist",
     "build": "rollup --config",
