--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
       "es2017"
     ],
 
-    // declaration setting is pushed from rollup
-    // "declaration": true,
+    "declaration": true,
     "sourceMap": true,
     "noEmitOnError": true,
 
