Remove minified es bundle

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "build:watch": "tsc --outDir build --watch",
     "tslint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts*\"",
     "predist": "rimraf dist",
-    "dist": "yarn dist:esm && yarn dist:umd && yarn dist:esm:prod && yarn dist:umd:prod && yarn dist:dts && yarn dist:demolib",
+    "dist": "yarn dist:esm && yarn dist:umd && yarn dist:umd:prod && yarn dist:dts && yarn dist:demolib",
     "dist:esm": "FORMAT=es rollup --config",
-    "dist:esm:prod": "NODE_ENV=production FORMAT=es rollup --config",
     "dist:umd": "FORMAT=umd rollup --config",
     "dist:umd:prod": "NODE_ENV=production FORMAT=umd rollup --config",
     "dist:dts": "dts-bundle-generator src/index.ts -o dist/glutenfree.d.ts --umd-module-name glutenfree",
