--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/webgl2": "^0.0.2",
     "dts-bundle-generator": "^0.6.0",
     "http-server": "^0.10.0",
+    "parse-obj": "^0.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.50.1",
     "rollup-plugin-replace": "^2.0.0",
