Refactor build and produce more combinations

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "We serve your draw calls type-safe and gluten-free",
   "author": "yanchith",
   "license": "MIT",
-  "main": "dist/glutenfree.umd.js",
-  "module": "dist/glutenfree.es.js",
+  "main": "dist/glutenfree.production.umd.js",
+  "module": "dist/glutenfree.production.es.js",
   "types": "dist/glutenfree.d.ts",
   "scripts": {
     "serve": "http-server docs -p 8000",
@@ -15,17 +15,18 @@
     "build:watch": "tsc --outDir build --watch",
     "tslint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts*\"",
     "predist": "rimraf dist",
-    "dist": "yarn dist:es && yarn dist:umd && yarn dist:es:prod && yarn dist:umd:prod && yarn dist:dts && yarn dist:demolib",
+    "dist": "yarn dist:es && yarn dist:umd && yarn dist:es:prod && yarn dist:umd:prod && yarn dist:es:prod:min && yarn dist:umd:prod:min && yarn dist:dts",
     "dist:es": "FORMAT=es rollup --config",
     "dist:umd": "FORMAT=umd rollup --config",
     "dist:es:prod": "NODE_ENV=production FORMAT=es rollup --config",
     "dist:umd:prod": "NODE_ENV=production FORMAT=umd rollup --config",
+    "dist:es:prod:min": "NODE_ENV=production FORMAT=es MIN=true rollup --config",
+    "dist:umd:prod:min": "NODE_ENV=production FORMAT=umd MIN=true rollup --config",
     "dist:dts": "dts-bundle-generator src/index.ts -o dist/glutenfree.d.ts --umd-module-name glutenfree",
-    "dist:demolib": "yarn __rmdemolib && yarn __cpdemolib",
-    "__rmdemolib": "rm docs/lib/glutenfree.{es.min.js,es.min.js.map}",
-    "__cpdemolib": "cp dist/glutenfree.{es.min.js,es.min.js.map} docs/lib",
-    "clean": "rimraf build && rimraf dist",
-    "cleandist": "yarn build && yarn dist"
+    "demolib": "yarn __rmdemolib && yarn __cpdemolib",
+    "__rmdemolib": "rm docs/lib/glutenfree.production.{es.min.js,es.min.js.map}",
+    "__cpdemolib": "cp dist/glutenfree.production.{es.min.js,es.min.js.map} docs/lib",
+    "clean": "rimraf build && rimraf dist"
   },
   "devDependencies": {
     "@types/webgl2": "^0.0.2",
