--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "sourceMap": true,
     "noEmitOnError": true,
 
+    "preserveConstEnums": true,
+
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
