--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "tslint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts*\"",
     "predist": "rimraf dist",
     "dist": "yarn dist:es && yarn dist:umd && yarn dist:es:prod && yarn dist:umd:prod && yarn dist:es:prod:min && yarn dist:umd:prod:min && yarn dist:dts",
-    "dist:es": "FORMAT=es rollup --config",
-    "dist:umd": "FORMAT=umd rollup --config",
-    "dist:es:prod": "NODE_ENV=production FORMAT=es rollup --config",
-    "dist:umd:prod": "NODE_ENV=production FORMAT=umd rollup --config",
-    "dist:es:prod:min": "NODE_ENV=production FORMAT=es MIN=true rollup --config",
-    "dist:umd:prod:min": "NODE_ENV=production FORMAT=umd MIN=true rollup --config",
+    "dist:es": "cross-env FORMAT=es rollup --config",
+    "dist:umd": "cross-env FORMAT=umd rollup --config",
+    "dist:es:prod": "cross-env NODE_ENV=production FORMAT=es rollup --config",
+    "dist:umd:prod": "cross-env NODE_ENV=production FORMAT=umd rollup --config",
+    "dist:es:prod:min": "cross-env NODE_ENV=production FORMAT=es MIN=true rollup --config",
+    "dist:umd:prod:min": "cross-env NODE_ENV=production FORMAT=umd MIN=true rollup --config",
     "dist:dts": "dts-bundle-generator src/index.ts -o dist/glutenfree.d.ts --umd-module-name glutenfree",
     "demolib": "yarn __rmdemolib && yarn __cpdemolib",
     "__rmdemolib": "rm docs/lib/glutenfree.production.{es.min.js,es.min.js.map}",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/webgl2": "^0.0.2",
+    "cross-env": "^5.1.3",
     "dts-bundle-generator": "^0.6.0",
     "http-server": "^0.10.0",
     "rimraf": "^2.6.2",
