--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 
     "declaration": true,
     "sourceMap": true,
-    "noEmitOnError": true,
+    "noEmitOnError": false,
 
     "strict": true,
     "noUnusedLocals": true,
