--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "We serve your draw calls type-safe and gluten-free",
   "author": "yanchith",
   "license": "MIT",
-  "main": "dist/glutenfree.production.umd.js",
-  "module": "dist/glutenfree.production.es.js",
+  "main": "dist/glutenfree.umd.js",
+  "module": "dist/glutenfree.es.js",
   "types": "dist/glutenfree.d.ts",
   "scripts": {
     "serve": "http-server docs -p 8000",
@@ -16,16 +16,16 @@
     "tslint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts*\"",
     "predist": "rimraf dist",
     "dist": "yarn dist:es && yarn dist:umd && yarn dist:es:prod && yarn dist:umd:prod && yarn dist:es:prod:min && yarn dist:umd:prod:min && yarn dist:dts",
-    "dist:es": "cross-env FORMAT=es rollup --config",
-    "dist:umd": "cross-env FORMAT=umd rollup --config",
-    "dist:es:prod": "cross-env NODE_ENV=production FORMAT=es rollup --config",
-    "dist:umd:prod": "cross-env NODE_ENV=production FORMAT=umd rollup --config",
-    "dist:es:prod:min": "cross-env NODE_ENV=production FORMAT=es MIN=true rollup --config",
-    "dist:umd:prod:min": "cross-env NODE_ENV=production FORMAT=umd MIN=true rollup --config",
+    "dist:es": "cross-env FMT=es rollup --config",
+    "dist:umd": "cross-env FMT=umd rollup --config",
+    "dist:es:prod": "cross-env FMT=es PROD=true rollup --config",
+    "dist:umd:prod": "cross-env FMT=umd PROD=true rollup --config",
+    "dist:es:prod:min": "cross-env FMT=es PROD=true MIN=true rollup --config",
+    "dist:umd:prod:min": "cross-env FMT=umd PROD=true MIN=true rollup --config",
     "dist:dts": "dts-bundle-generator src/index.ts -o dist/glutenfree.d.ts --umd-module-name glutenfree",
-    "demolib": "yarn __rmdemolib && yarn __cpdemolib",
-    "__rmdemolib": "rm docs/lib/glutenfree.production.{es.min.js,es.min.js.map}",
-    "__cpdemolib": "cp dist/glutenfree.production.{es.min.js,es.min.js.map} docs/lib",
+    "demolib": "yarn demolib:rm && yarn demolib:cp",
+    "demolib:rm": "rm docs/lib/glutenfree.es.{js,js.map}",
+    "demolib:cp": "cp dist/glutenfree.es.{js,js.map} docs/lib",
     "clean": "rimraf build && rimraf dist"
   },
   "devDependencies": {
