--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dist:es:prod:min": "cross-env FMT=es PROD=true MIN=true rollup --config",
     "dist:umd:prod:min": "cross-env FMT=umd PROD=true MIN=true rollup --config",
     "dist:dts": "dts-bundle-generator src/index.ts -o dist/glutenfree.d.ts --umd-module-name glutenfree",
+    "dist:dts2": "dts-generator --name glutenfree --project .  --out dist/glutenfree.d.ts",
     "demolib": "yarn demolib:rm && yarn demolib:cp",
     "demolib:rm": "rm docs/lib/glutenfree.es.{js,js.map}",
     "demolib:cp": "cp dist/glutenfree.es.{js,js.map} docs/lib",
@@ -32,6 +33,7 @@
     "@types/webgl2": "^0.0.2",
     "cross-env": "^5.1.3",
     "dts-bundle-generator": "^0.6.0",
+    "dts-generator": "^2.1.0",
     "http-server": "^0.10.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.50.1",
