--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.0-dev.20180118",
-    "uglify-es": "^3.3.7"
+    "typescript": "^2.7.0-rc",
+    "uglify-es": "^3.3.8"
   }
 }
