--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "include": ["src/**/*.ts"]
 }
