--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "glutenfree",
+  "name": "webglutenfree",
   "version": "0.0.1",
   "description": "We serve your draw calls type-safe and gluten-free",
   "author": "yanchith",
   "license": "MIT",
-  "main": "dist/glutenfree.umd.js",
-  "module": "dist/glutenfree.es.js",
-  "types": "dist/glutenfree.d.ts",
+  "main": "dist/gluten-free.umd.js",
+  "module": "dist/gluten-free.es.js",
+  "types": "dist/gluten-free.d.ts",
   "scripts": {
     "serve": "http-server docs -p 8000",
     "prebuild": "rimraf build",
@@ -24,10 +24,10 @@
     "dist:umd:prod": "cross-env FMT=umd PROD=true rollup --config",
     "dist:es:prod:min": "cross-env FMT=es PROD=true MIN=true rollup --config",
     "dist:umd:prod:min": "cross-env FMT=umd PROD=true MIN=true rollup --config",
-    "dist:dts": "cp build/*.d.ts dist && mv dist/index.d.ts dist/glutenfree.d.ts",
+    "dist:dts": "cp build/*.d.ts dist && mv dist/index.d.ts dist/gluten-free.d.ts",
     "demolib": "yarn demolib:rm && yarn demolib:cp",
-    "demolib:rm": "rm docs/lib/glutenfree.es.{js,js.map}",
-    "demolib:cp": "cp dist/glutenfree.es.{js,js.map} docs/lib",
+    "demolib:rm": "rm docs/lib/gluten-free.es.{js,js.map}",
+    "demolib:cp": "cp dist/gluten-free.es.{js,js.map} docs/lib",
     "clean": "rimraf build && rimraf dist"
   },
   "devDependencies": {
