--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.0-rc",
+    "typescript": "^2.7.1",
     "uglify-es": "^3.3.8"
   }
 }
