--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "webglutenfree",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "We serve your draw calls type-safe and gluten-free",
-  "keywords": ["webgl", "gl", "stateless", "graphics", "glsl"],
-  "repository" :
-  {
-      "type" : "git",
-      "url" : "https://github.com/yanchith/webglutenfree.git"
+  "keywords": [
+    "webgl",
+    "gl",
+    "stateless",
+    "graphics",
+    "glsl"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yanchith/webglutenfree.git"
   },
   "author": "yanchith",
   "license": "MIT",
