--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "yanchith",
   "license": "MIT",
   "main": "dist/webglutenfree.umd.js",
-  "module": "dist/webglutenfree.es.js",
+  "module": "dist/webglutenfree.js",
   "types": "dist/webglutenfree.d.ts",
   "scripts": {
     "serve": "http-server docs -p 8000",
@@ -28,8 +28,6 @@
     "dev": "yarn build && rimraf dist && yarn dist:es && yarn demolib",
     "predist": "rimraf dist",
     "dist": "yarn dist:es && yarn dist:umd && yarn dist:es:prod && yarn dist:umd:prod && yarn dist:es:prod:min && yarn dist:umd:prod:min && yarn dist:dts",
-    "predist:watch": "rimraf dist",
-    "dist:watch": "cross-env FMT=es rollup --config --watch",
     "dist:es": "cross-env FMT=es rollup --config",
     "dist:umd": "cross-env FMT=umd rollup --config",
     "dist:es:prod": "cross-env FMT=es PROD=true rollup --config",
@@ -37,9 +35,11 @@
     "dist:es:prod:min": "cross-env FMT=es PROD=true MIN=true rollup --config",
     "dist:umd:prod:min": "cross-env FMT=umd PROD=true MIN=true rollup --config",
     "dist:dts": "cp build/*.d.ts dist && mv dist/index.d.ts dist/webglutenfree.d.ts",
+    "predist:es:watch": "rimraf dist",
+    "dist:es:watch": "cross-env FMT=es rollup --config --watch",
     "demolib": "yarn demolib:rm && yarn demolib:cp",
-    "demolib:rm": "rm docs/lib/webglutenfree.es.{js,js.map}",
-    "demolib:cp": "cp dist/webglutenfree.es.{js,js.map} docs/lib",
+    "demolib:rm": "rm docs/lib/webglutenfree.{js,js.map}",
+    "demolib:cp": "cp dist/webglutenfree.{js,js.map} docs/lib",
     "clean": "rimraf build && rimraf dist"
   },
   "dependencies": {
