Remove import cycle; coalesc device and comand into core

--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "prebuild:watch": "rimraf build",
     "build:watch": "tsc --outDir build --watch",
     "tslint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts*\"",
-    "dev": "yarn build && rimraf dist && yarn dist:es && yarn demolib",
     "predist": "rimraf dist",
-    "dist": "yarn dist:es && yarn dist:umd && yarn dist:es:prod && yarn dist:umd:prod && yarn dist:es:prod:min && yarn dist:umd:prod:min && yarn dist:dts",
+    "dist": "yarn dist:es && yarn dist:es:prod:min && yarn dist:umd:prod:min && yarn dist:dts",
     "dist:es": "cross-env FMT=es rollup --config",
     "dist:umd": "cross-env FMT=umd rollup --config",
     "dist:es:prod": "cross-env FMT=es PROD=true rollup --config",
