--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "cpx": "^1.5.0",
     "cross-env": "^5.1.3",
     "http-server": "^0.10.0",
+    "normals": "^1.1.0",
+    "parse-obj": "^0.0.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.55.1",
     "rollup-plugin-replace": "^2.0.0",
