--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cpx": "^1.5.0",
     "cross-env": "^5.1.4",
     "http-server": "^0.11.1",
+    "monaco-editor": "^0.11.1",
     "normals": "^1.1.0",
     "parse-obj": "^0.0.0",
     "rimraf": "^2.6.2",
