Fix envification story

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "dist": "yarn dist:es && yarn dist:umd && yarn dist:es:prod:min && yarn dist:umd:prod:min && yarn dist:dts",
     "dist:es": "cross-env FMT=es rollup --config",
     "dist:umd": "cross-env FMT=umd rollup --config",
-    "dist:es:prod": "cross-env FMT=es ENV=p rollup --config",
-    "dist:umd:prod": "cross-env FMT=umd ENV=p rollup --config",
-    "dist:es:prod:min": "cross-env FMT=es ENV=p MIN=true rollup --config",
-    "dist:umd:prod:min": "cross-env FMT=umd ENV=p MIN=true rollup --config",
+    "dist:es:prod": "cross-env FMT=es PROD=yes rollup --config",
+    "dist:umd:prod": "cross-env FMT=umd PROD=yes rollup --config",
+    "dist:es:prod:min": "cross-env FMT=es PROD=yes MIN=yes rollup --config",
+    "dist:umd:prod:min": "cross-env FMT=umd PROD=yes MIN=yes rollup --config",
     "dist:dts": "cpx \"build/**/*.d.ts\" dist && mv dist/index.d.ts dist/webglutenfree.d.ts",
     "predist:es:watch": "rimraf dist",
     "dist:es:watch": "cross-env FMT=es rollup --config --watch",
