Simplify bundling options using rollup's multiconfig

--- a/package.json
+++ b/package.json
@@ -21,18 +21,14 @@
   "types": "dist/webglutenfree.d.ts",
   "scripts": {
     "serve": "http-server docs -p 8000",
-    "precompile": "rimraf build",
+    "prebuild": "rimraf build && rimraf dist",
+    "build": "yarn compile && yarn bundle && yarn copy-dts && yarn update-example-lib",
     "compile": "tsc --outDir build",
-    "predist": "rimraf dist",
-    "dist": "yarn dist:es && yarn dist:umd && yarn dist:dts",
-    "dist:es": "cross-env FMT=es rollup --config",
-    "dist:umd": "cross-env FMT=umd rollup --config",
-    "dist:es:prod": "cross-env FMT=es PROD=yes rollup --config",
-    "dist:umd:prod": "cross-env FMT=umd PROD=yes rollup --config",
-    "dist:es:prod:min": "cross-env FMT=es PROD=yes MIN=yes rollup --config",
-    "dist:umd:prod:min": "cross-env FMT=umd PROD=yes MIN=yes rollup --config",
-    "dist:dts": "cpx \"build/**/{*.d.ts,*d.ts.map}\" dist && mv dist/index.d.ts dist/webglutenfree.d.ts",
-    "update-sandbox": "rimraf docs/lib && cpx \"dist/{webglutenfree.js,webglutenfree.js.map,**/*.d.ts}\" docs/lib",
+    "compile:watch": "tsc --outDir build --watch",
+    "bundle": "rollup --config",
+    "bundle:all": "cross-env ALL=yes rollup --config",
+    "copy-dts": "cpx \"build/**/{*.d.ts,*d.ts.map}\" dist && mv dist/index.d.ts dist/webglutenfree.d.ts",
+    "update-example-lib": "rimraf docs/lib && cpx \"dist/{webglutenfree.js,webglutenfree.js.map,**/*.d.ts}\" docs/lib",
     "lint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts\"",
     "clean": "rimraf build && rimraf dist"
   },
