--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   "scripts": {
     "serve": "http-server docs -p 8000",
     "prebuild": "rimraf build && rimraf dist",
-    "build": "yarn compile && yarn bundle && yarn copy-dts && yarn update-example-lib",
+    "build": "yarn compile && yarn bundle && yarn copy-dts && yarn update-lib",
     "compile": "tsc --outDir build",
     "compile:watch": "tsc --outDir build --watch",
     "bundle": "rollup --config",
     "bundle:all": "cross-env ALL=yes rollup --config",
     "copy-dts": "cpx \"build/**/{*.d.ts,*d.ts.map}\" dist && mv dist/index.d.ts dist/webglutenfree.d.ts",
-    "update-example-lib": "rimraf docs/lib && cpx \"dist/{webglutenfree.js,webglutenfree.js.map,**/*.d.ts}\" docs/lib",
+    "update-lib": "rimraf docs/lib && cpx \"dist/{webglutenfree.js,webglutenfree.js.map,**/*.d.ts}\" docs/lib",
+    "test": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ava src/**/*.spec.ts",
     "lint": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts\"",
     "clean": "rimraf build && rimraf dist"
   },
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/node": "^6.0.110",
     "@types/three": "^0.91.14",
+    "ava": "^1.0.0-beta.6",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "http-server": "^0.11.1",
@@ -46,6 +48,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^3.0.0",
     "three": "^0.92.0",
+    "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.1"
   }
