--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "serve": "http-server docs -p 8000",
     "prebuild": "rimraf build && rimraf dist",
     "build": "yarn compile && yarn bundle && yarn copy-dts && yarn update-lib",
+    "build:all": "cross-env ALL=yes yarn build",
     "compile": "tsc --outDir build",
     "compile:watch": "tsc --outDir build --watch",
     "bundle": "rollup --config",
-    "bundle:all": "cross-env ALL=yes rollup --config",
+    "bundle:all": "cross-env ALL=yes yarn bundle",
     "copy-dts": "cpx \"build/**/{*.d.ts,*d.ts.map}\" dist && mv dist/index.d.ts dist/webglutenfree.d.ts",
     "update-lib": "rimraf docs/lib && cpx \"dist/{webglutenfree.js,webglutenfree.js.map,**/*.d.ts}\" docs/lib",
     "test": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ava src/**/*.spec.ts",
@@ -37,18 +38,18 @@
     "@types/webgl2": "^0.0.4"
   },
   "devDependencies": {
-    "@types/node": "^10.5.6",
+    "@types/node": "^10.9.4",
     "ava": "^1.0.0-beta.6",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "http-server": "^0.11.1",
     "rimraf": "^2.6.2",
-    "rollup": "^0.63.5",
+    "rollup": "^0.65.0",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-terser": "^1.0.1",
-    "three": "^0.95.0",
-    "ts-node": "^7.0.0",
+    "rollup-plugin-terser": "^2.0.2",
+    "three": "^0.96.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.3"
   }
 }
