--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/webgl2": "^0.0.4"
   },
   "devDependencies": {
-    "ava": "^1.0.0-beta.8",
+    "ava": "^1.0.0-rc.1",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "http-server": "^0.11.1",
