--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
     "@types/webgl2": "^0.0.4"
   },
   "devDependencies": {
-    "ava": "^1.0.0-rc.1",
+    "ava": "^1.0.1",
     "cpx": "^1.5.0",
     "cross-env": "^5.2.0",
     "http-server": "^0.11.1",
     "rimraf": "^2.6.2",
-    "rollup": "^0.66.6",
+    "rollup": "^0.68.2",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-terser": "^3.0.0",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2"
   }
 }
