--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bundle-all": "cross-env ALL=yes yarn bundle",
     "copy-dts": "cpx \"build/{*.d.ts,*d.ts.map}\" dist && mv dist/index.d.ts dist/webglutenfree.d.ts",
     "update-lib": "rimraf docs/lib && cpx \"dist/{webglutenfree.js,webglutenfree.js.map,**/*.d.ts}\" docs/lib",
-    "test": "ava build/**/*.spec.js --node-arguments \"--input-type module\"  ",
+    "test": "ava build/**/*.spec.js",
     "lint": "yarn lint-src && yarn lint-examples",
     "lint-src": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts\"",
     "lint-examples": "tslint --config tslint.json \"docs/*.ts\"",
@@ -45,6 +45,7 @@
     "ava": "^3.15.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
+    "esm": "^3.2.25",
     "http-server": "^0.12.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.37.1",
