--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
   - "lts/*"
 script:
   - "yarn compile"
-  - "yarn bundle:all"
+  - "yarn bundle-all"
   - "yarn test"
   - "yarn lint"
 cache: yarn
