--- a/package.json
+++ b/package.json
@@ -23,33 +23,34 @@
     "serve": "http-server docs -p 8000",
     "prebuild": "rimraf build && rimraf dist",
     "build": "yarn compile && yarn bundle && yarn copy-dts && yarn update-lib",
-    "build:all": "cross-env ALL=yes yarn build",
+    "build-all": "cross-env ALL=yes yarn build",
     "compile": "tsc --outDir build",
     "compile:watch": "tsc --outDir build --watch",
     "bundle": "rollup --config",
-    "bundle:all": "cross-env ALL=yes yarn bundle",
+    "bundle-all": "cross-env ALL=yes yarn bundle",
     "copy-dts": "cpx \"build/{*.d.ts,*d.ts.map}\" dist && mv dist/index.d.ts dist/webglutenfree.d.ts",
     "update-lib": "rimraf docs/lib && cpx \"dist/{webglutenfree.js,webglutenfree.js.map,**/*.d.ts}\" docs/lib",
-    "test": "cross-env TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' ava src/**/*.spec.ts",
+    "test": "ava build/**/*.spec.js",
     "lint": "yarn lint-src && yarn lint-examples",
     "lint-src": "tslint --config tslint.json --project tsconfig.json \"src/**/*.ts\"",
     "lint-examples": "tslint --config tslint.json \"docs/*.ts\"",
     "clean": "rimraf build && rimraf dist"
   },
-  "dependencies": {
-    "@types/webgl2": "^0.0.4"
+  "volta": {
+    "node": "15.6.0",
+    "yarn": "1.22.10"
   },
   "devDependencies": {
-    "ava": "^2.1.0",
+    "@rollup/plugin-replace": "^2.3.4",
+    "ava": "^3.15.0",
     "cpx": "^1.5.0",
-    "cross-env": "^5.2.0",
-    "http-server": "^0.11.1",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.15.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.0.0",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1"
+    "cross-env": "^7.0.3",
+    "esm": "^3.2.25",
+    "http-server": "^0.12.3",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.37.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.3"
   }
 }
